yamls/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationtimestamp: null
  name: meido
